Creating Settings Activity Menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="name">Nama</string>
     <string name="login_ask">Sudah punya akun?</string>
     <string name="detail_story">Detail Story</string>
+    <string name="settings">Settings</string>
 </resources>
