--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="detail_story">Detail Story</string>
     <string name="settings">Settings</string>
     <string name="add_story">Add Story</string>
+    <string name="title_alert_story">Silakan upload gambar dan isi deskripsi dahulu</string>
 </resources>
