--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="settings">Settings</string>
     <string name="add_story">Add Story</string>
     <string name="title_alert_story">Silakan upload gambar dan isi deskripsi dahulu</string>
+    <string name="name_picture">Name of Picture</string>
+    <string name="description">Description</string>
+    <string name="logout">Logout</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="upload">Upload</string>
 </resources>
